# OPN_ORACLE

./: .dockerignore  .gitignore  01_IMPLEMENTATION_PLAN.md  AGENTS.md  Dockerfile.web  OPN_Oracle_Codex_Memory.md  PROMPT_CODEX_SOL_OPN_ORACLE_DOS_INTERFACES.md  README.md  README_UI_PROTOTYPES.md  compose.dev.yml  compose.prod.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml
apps/api/migrations/: alembic.ini  env.py
apps/api/migrations/versions/: 20260710_0001_foundation.py  20260710_0002_platform_multitenancy.py  20260710_0003_auth_security.py  20260710_0004_oracle_core.py  20260710_0005_oracle_core_hardening.py  20260710_0006_celery_jobs.py  20260710_0007_signal_avanza.py  20260710_0008_ai_runtime.py  20260711_0009_documents_evidence_search.py  20260711_0010_reports_notifications_exports.py  20260711_0011_platform_backups.py  20260711_0012_ollama_ai_provider.py  20260712_0013_bulk_dossier_delete.py  20260712_0014_grant_dossier_delete.py  20260712_0015_actor_candidate_reviews.py  20260713_0016_signal_dedupe_keys.py  20260714_0017_ai_pipeline_budget.py  20260714_0018_ai_retry_audit_history.py  (+7 more)
apps/api/tests/: __init__.py  conftest.py  seed_frontend_e2e.py  test_actor_candidates.py  test_ai_runtime.py  test_alerts.py  test_app.py  test_auth_security.py  test_backup_agent.py  test_comparable_procurement.py  test_competitive_procurement.py  test_contract.py  test_documents.py  test_email.py  test_entity_dossier_report.py  test_entity_intel.py  test_evaluate_comparable_profile_script.py  test_health.py  test_integration_alerts.py  test_integration_auth.py  test_integration_dependencies.py  test_integration_jobs.py  test_integration_multitenancy.py  test_integration_oracle_domain.py  test_integration_procurement_search_feedback.py  test_integration_procurement_search_feedback_migration.py  test_integration_procurement_search_watch.py  test_integration_procurement_search_watch_migration.py  test_integration_reporting_extra.py  test_integration_tender_search_wizard.py  test_investigation_documents.py  test_investigation_sampling.py  test_investigation_spike.py  test_jobs.py  test_multitenancy_unit.py  test_oracle_scoring.py  test_procurement.py  test_procurement_document_report.py  test_procurement_search_feedback.py  test_procurement_search_preview.py  (+11 more)
(+595 files in other folders)
