[project]
name = "opn-oracle-api"
version = "0.1.0"
description = "Authoritative Flask API for OPN Oracle"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "apiflask>=2.4.0,<3.0.0",
  "flask>=3.1.0,<4.0.0",
  "flask-migrate>=4.1.0,<5.0.0",
  "flask-login>=0.6.3,<1.0.0",
  "flask-session>=0.8.0,<1.0.0",
  "flask-limiter>=3.12.0,<5.0.0",
  "flask-sqlalchemy>=3.1.1,<4.0.0",
  "gunicorn>=23.0.0,<24.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "argon2-cffi>=23.1.0,<26.0.0",
  "redis>=6.0.0,<8.0.0",
  "celery[redis]>=5.5.0,<6.0.0",
  "cryptography>=48.0.1,<49.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pypdf>=5.7.0,<7.0.0",
  "boto3>=1.38.0,<2.0.0",
  # 69 es la primera serie libre de PYSEC-2026-2034 (corregido en 68.0) y de
  # PYSEC-2026-3412 (last_affected 68.1). Por debajo, el gate pip-audit del CI
  # queda en rojo y no hay release posible.
  "weasyprint>=69,<70",
]

[dependency-groups]
dev = [
  "mypy>=1.16.0,<2.0.0",
  "pytest>=8.4.0,<10.0.0",
  "pytest-cov>=6.2.0,<8.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opn_oracle"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"tests/test_integration_oracle_domain.py" = ["E501"]
"tests/test_oracle_scoring.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["opn_oracle"]
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_unreachable = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "flask_migrate.*",
  "apiflask.*",
  "flask_login.*",
  "flask_session.*",
  "celery.*",
  "kombu.*",
  "boto3.*",
  "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=opn_oracle --cov-report=term-missing --cov-fail-under=84"
testpaths = ["tests"]
markers = [
  "unit: isolated test without external services",
  "integration: test requiring PostgreSQL or Redis",
]

[tool.coverage.run]
branch = true
source = ["opn_oracle"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
